--- a/src/components/sections/Tail.astro
+++ b/src/components/sections/Tail.astro
@@ -30,7 +30,7 @@ const { beian } = basics
       <p class='mt-3 text-center font-mono'>
         I <span class='font-black'>100%</span> Proudly Use <a
           class='font-black'
-          href='https://github.com/MiraHikari/portfolio'>
+          href='https://github.com/erdowaka'>
           <span class='underline'>Portfolio</span>
         </a> that Made by <a
           class='font-black'
